--- a/Proiect2/app/src/main/res/layout/fragment_people_list.xml
+++ b/Proiect2/app/src/main/res/layout/fragment_people_list.xml
@@ -37,13 +37,15 @@
                 android:id="@+id/searchInput"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="6dp"
+                android:layout_marginRight="6dp"
 
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/searchIcon"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
 
-                android:hint="Cauta un utilizator"
+                android:hint="Cauta contact"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_marginHorizontal="32dp"
                 >
@@ -57,6 +59,7 @@
                     android:textSize="24sp"/>
             </com.google.android.material.textfield.TextInputLayout>
             <ImageButton
+                android:layout_marginRight="6dp"
                 android:id="@+id/searchIcon"
                 android:layout_width="48dp"
                 android:layout_height="48dp"
@@ -90,16 +93,19 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:indeterminate="true"
+            android:layout_marginTop="10dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/searchBarAndButton"
             app:layout_constraintEnd_toEndOf="parent"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
-    <Button
+    <ImageButton
         android:id="@+id/addPerson"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Adauga o noua persoana"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_margin="10dp"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:background="@drawable/rounded_corner"
+        android:src="@drawable/ic_baseline_add_24"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/listAndSearch"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
