--- a/Proiect2/app/src/main/res/layout/fragment_location_options.xml
+++ b/Proiect2/app/src/main/res/layout/fragment_location_options.xml
@@ -4,31 +4,25 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".people.addPerson.personSelection.PersonSelectionFragment"
+    tools:context=".navigation.firstPage.NavigationFirstPageFragment"
     >
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/toolbarContainer"
+    <TextView
+        android:id="@+id/errView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
-        app:layout_constraintTop_toTopOf="parent">
-
-        <com.google.android.material.appbar.MaterialToolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            app:navigationIcon="@drawable/ic_baseline_arrow_back_ios_new_24"
-            style="@style/Widget.MaterialComponents.Toolbar.Primary"
-            app:menu="@menu/characters_toolbar"
-            />
-
-    </com.google.android.material.appbar.AppBarLayout>
+        android:textSize="30sp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="Locatiile dumneavoastra nu au putut fi obtinute"
+        />
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/toolbarContainer"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/addPerson"
         android:id="@+id/listAndSearch"
         >
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -51,7 +45,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
 
-                android:hint="Cauta un utilizator"
+                android:hint="Cauta locatie"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_marginHorizontal="32dp"
                 >
@@ -85,6 +79,7 @@
             app:layout_constraintTop_toBottomOf="@id/searchBarAndButton"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            android:text="Nu ai nicio locatie cu acest nume sau la aceasta adresa"
             />
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/list"
@@ -103,5 +98,17 @@
             app:layout_constraintTop_toBottomOf="@id/searchBarAndButton"
             app:layout_constraintEnd_toEndOf="parent"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
+    <ImageButton
+        android:id="@+id/addPerson"
+        android:layout_margin="10dp"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:background="@drawable/rounded_corner"
+        android:src="@drawable/ic_baseline_add_24"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/listAndSearch"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
