--- a/Proiect2/app/src/main/res/navigation/nav_graph.xml
+++ b/Proiect2/app/src/main/res/navigation/nav_graph.xml
@@ -27,6 +27,9 @@ app:startDestination="@id/loginFragment">
         <action
             android:id="@+id/initiate_add_person"
             app:destination="@+id/addPersonOptions"/>
+        <action
+            android:id="@+id/action_pagerFragment_to_addLocationFragment"
+            app:destination="@id/addLocationFragment" />
     </fragment>
     <fragment
         android:id="@+id/addPersonOptions"
@@ -58,4 +61,9 @@ app:startDestination="@id/loginFragment">
             android:name="characterId"
             app:argType="integer" />
     </fragment>
+    <fragment
+        android:id="@+id/addLocationFragment"
+        android:name="com.example.proiect.navigation.addLocation.AddLocationFragment"
+        android:label="fragment_add_location"
+        tools:layout="@layout/fragment_add_location" />
 </navigation>
