--- a/Proiect2/app/src/main/res/values/colors.xml
+++ b/Proiect2/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="red">#FFFF0000</color>
+    <color name="gray">#AFAFAF</color>
 </resources>
