--- a/Proiect2/app/src/main/res/layout/fragment_add_person_list.xml
+++ b/Proiect2/app/src/main/res/layout/fragment_add_person_list.xml
@@ -6,27 +6,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".people.addPerson.personSelection.PersonSelectionFragment"
     >
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/toolbarContainer"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-
-        app:layout_constraintTop_toTopOf="parent">
-
-        <com.google.android.material.appbar.MaterialToolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            app:navigationIcon="@drawable/ic_baseline_arrow_back_ios_new_24"
-            style="@style/Widget.MaterialComponents.Toolbar.Primary"
-            app:menu="@menu/characters_toolbar"
-            />
-
-    </com.google.android.material.appbar.AppBarLayout>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/toolbarContainer"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:id="@+id/listAndSearch"
