--- a/Proiect2/app/src/main/res/layout/fragment_people_list.xml
+++ b/Proiect2/app/src/main/res/layout/fragment_people_list.xml
@@ -87,6 +87,7 @@
             android:layout_height="0dp"
 
             app:layout_constraintTop_toBottomOf="@id/searchBarAndButton"
+            app:layout_constraintBottom_toBottomOf="parent"
             />
         <com.google.android.material.progressindicator.CircularProgressIndicator
             android:id="@+id/loading"
@@ -106,7 +107,6 @@
         android:background="@drawable/rounded_corner"
         android:src="@drawable/ic_baseline_add_24"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/listAndSearch"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
 
