--- a/Proiect2/app/src/main/res/layout/simple_option_cell.xml
+++ b/Proiect2/app/src/main/res/layout/simple_option_cell.xml
@@ -3,7 +3,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="10dp"
-
     android:background="@color/purple_700"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
@@ -19,5 +18,9 @@
         android:textColor="@color/white"
         tools:text="description"
         android:maxLines="1"/>
-
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        app:layout_constraintTop_toBottomOf="@id/text"
+        android:background="@android:color/darker_gray"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
