--- a/Proiect2/app/src/main/res/values/colors.xml
+++ b/Proiect2/app/src/main/res/values/colors.xml
@@ -9,4 +9,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="red">#FFFF0000</color>
+    <color name="mainColor">#336AC8</color>
+    <color name="secondaryColor">#71D0E8</color>
+    <color name="gray">#737373</color>
 </resources>
