--- a/Proiect2/app/src/main/res/layout/fragment_gallery_list_item.xml
+++ b/Proiect2/app/src/main/res/layout/fragment_gallery_list_item.xml
@@ -8,6 +8,7 @@
     android:maxWidth="100dp"
     android:maxHeight="100dp"
     android:scaleType="centerCrop"
+    android:src="@drawable/gal4"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
