--- a/Proiect2/app/src/main/res/layout/fragment_statistics.xml
+++ b/Proiect2/app/src/main/res/layout/fragment_statistics.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".statistics.StatisticsFragment">
 
     <com.google.android.material.appbar.AppBarLayout
@@ -23,23 +23,25 @@
 
     <TextView
         android:id="@+id/idTVHead"
-        app:layout_constraintTop_toBottomOf="@id/toolbarContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="4dp"
         android:gravity="center"
         android:padding="4dp"
-        android:text="@string/app_name"
+        android:text="Statistici pentru saptamana anterioara"
         android:textAlignment="center"
         android:textColor="@color/purple_200"
         android:textSize="20sp"
         android:textStyle="bold"
-        tools:text="Statistici pentru saptamana anterioara"/>
+        app:layout_constraintTop_toBottomOf="@id/toolbarContainer"
+        tools:text="Statistici pentru saptamana anterioara" />
 
     <com.jjoe64.graphview.GraphView
         android:id="@+id/idGraphView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_constraintTop_toBottomOf="@id/idTVHead" />
+        android:layout_marginTop="96dp"
+        app:layout_constraintTop_toBottomOf="@+id/idTVHead"
+        tools:layout_editor_absoluteX="-16dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
