--- a/Proiect2/app/src/main/res/layout/activity_chat.xml
+++ b/Proiect2/app/src/main/res/layout/activity_chat.xml
@@ -23,6 +23,14 @@
             />
 
     </com.google.android.material.appbar.AppBarLayout>
+    <ImageView
+        android:id="@+id/mapImage"
+        app:layout_constraintTop_toBottomOf="@id/toolbarContainer"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/nav_host_fragment"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        />
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/nav_host_fragment"
         android:name="androidx.navigation.fragment.NavHostFragment"
@@ -30,7 +38,7 @@
         android:layout_height="0dp"
 
         android:layout_marginVertical="10dp"
-        app:layout_constraintTop_toBottomOf="@id/toolbarContainer"
+        app:layout_constraintTop_toBottomOf="@id/mapImage"
         app:layout_constraintBottom_toBottomOf="parent"
         app:defaultNavHost="true"
         app:navGraph="@navigation/nav_chat"
