--- a/Proiect2/app/src/main/res/layout/fragment_activity_calendar.xml
+++ b/Proiect2/app/src/main/res/layout/fragment_activity_calendar.xml
@@ -20,6 +20,7 @@
         app:layout_constraintTop_toBottomOf="@id/calendarView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginBottom="40dp"
         android:id="@+id/activityList"
         />
     <TextView
@@ -27,11 +28,20 @@
         android:id="@+id/noActivities"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/calendarView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:textSize="24sp"
         android:textColor="@color/black"
         android:text="Nu aveti activitati in aceasta zi. Puteti crea activitati din butonul rotund din coltul din dreapta jos"
         android:maxLines="12"/>
+    <ImageButton
+        android:id="@+id/add"
+        android:layout_margin="10dp"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:background="@drawable/rounded_corner"
+        android:src="@drawable/ic_baseline_add_24"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
