--- a/Proiect2/app/src/main/res/layout/fragment_activity_item.xml
+++ b/Proiect2/app/src/main/res/layout/fragment_activity_item.xml
@@ -4,9 +4,12 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_marginHorizontal="8dp"
+    android:layout_marginHorizontal="10dp"
     android:layout_marginVertical="2dp"
-    android:padding="2dp">
+    android:background="@drawable/rounded_color_box"
+    android:backgroundTint="@color/mainColor"
+    android:padding="8dp"
+    >
 
     <TextView
         android:id="@+id/name"
@@ -15,7 +18,6 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginHorizontal="10dp"
         android:textSize="28sp"
         android:textStyle="bold"
         android:textColor="@color/black"
@@ -28,7 +30,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:textSize="22sp"
+        android:textSize="24sp"
         android:textColor="@color/black"
         android:maxLines="3"/>
     <TextView
@@ -38,7 +40,7 @@
         app:layout_constraintTop_toBottomOf="@id/time"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:textSize="22sp"
+        android:textSize="24sp"
         android:textColor="@color/black"
         android:background="@drawable/rounded_color_box"
         android:maxLines="3"/>
