--- a/Proiect2/app/src/main/res/layout/fragment_chat.xml
+++ b/Proiect2/app/src/main/res/layout/fragment_chat.xml
@@ -25,6 +25,7 @@
         android:layout_marginHorizontal="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         android:backgroundTint="@color/white"
+        android:foregroundGravity="top"
         app:layout_constraintBottom_toTopOf="@id/sendTextAndButton"
         />
    <GridLayout
