--- a/Proiect2/app/src/main/res/layout/fragment_main_menu.xml
+++ b/Proiect2/app/src/main/res/layout/fragment_main_menu.xml
@@ -4,16 +4,13 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".activities.newInstance.ActivitySelectionFragment">
-
+    tools:context=".mainMenu.MainMenuFragment">
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/list"
+        android:id="@+id/menu_grid"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
-
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_height="0dp"
+        >
+    </androidx.recyclerview.widget.RecyclerView>
 </androidx.constraintlayout.widget.ConstraintLayout>
