--- a/Proiect2/app/src/main/res/layout/fragment_new_event.xml
+++ b/Proiect2/app/src/main/res/layout/fragment_new_event.xml
@@ -5,71 +5,74 @@
     android:layout_marginVertical="40dp"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".activities.newInstance.newActivity.NewActivityFragment">
+    tools:context=".activities.newInstance.newEvent.NewEventFragment">
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:orientation="vertical"
         app:layout_constraintTop_toTopOf="parent"
-        android:orientation="vertical">
+        tools:layout_editor_absoluteX="16dp">
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/titleInput"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
 
-                app:layout_constraintTop_toTopOf="parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="32dp"
+                android:hint="Nume eveniment"
+
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-
-                android:hint="Titlu activitate"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:layout_marginHorizontal="32dp"
-                >
+                app:layout_constraintTop_toTopOf="parent">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
 
-                    android:textSize="24sp"
+                    android:inputType="text"
                     android:maxLines="1"
-                    android:inputType="text"/>
+                    android:textSize="24sp" />
 
             </com.google.android.material.textfield.TextInputLayout>
+
             <TextView
                 android:id="@+id/titleInputErr"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
 
-                app:layout_constraintStart_toStartOf="@id/titleInput"
-                app:layout_constraintTop_toBottomOf="@id/titleInput"
+                android:textColor="@color/red"
                 android:textSize="24sp"
-                android:textColor="@color/red"/>
+                app:layout_constraintStart_toStartOf="@id/titleInput"
+                app:layout_constraintTop_toBottomOf="@id/titleInput" />
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/descriptionInput"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
 
-                app:layout_constraintTop_toBottomOf="@id/titleInputErr"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="32dp"
+                android:hint="Descriere(optional)"
+
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-
-                android:hint="Descriere(optional)"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:layout_marginHorizontal="32dp"
-                >
+                app:layout_constraintTop_toBottomOf="@id/titleInputErr">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/description"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
 
-                    android:textSize="24sp"
+                    android:inputType="text"
                     android:maxLines="1"
-                    android:inputType="text"/>
+                    android:textSize="24sp" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -77,23 +80,25 @@
                 android:id="@+id/dateInput"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/descriptionInput"
-                app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginHorizontal="30dp"
                 android:layout_marginVertical="10dp"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/descriptionInput">
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
 
-                    android:textSize="24sp"
-                    android:text="Alege data activitatii:"/>
+                    android:text="Alege data activitatii:"
+                    android:textSize="24sp" />
+
                 <CalendarView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
                     android:id="@+id/datePicker"
-                    />
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
             </LinearLayout>
+
             <LinearLayout
                 android:id="@+id/timeInput"
                 android:layout_width="match_parent"
@@ -108,7 +113,7 @@
                     android:layout_height="wrap_content"
 
                     android:textSize="24sp"
-                    android:text="Alege ora activitatii:"/>
+                    android:text="Alege ora primirii notificarii:"/>
                 <TimePicker
                     android:id="@+id/time"
                     android:layout_width="wrap_content"
@@ -122,60 +127,80 @@
                     android:textColor="@color/red"/>
             </LinearLayout>
             <LinearLayout
+                android:id="@+id/repeatabilityInput"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/timeInput"
-                android:orientation="horizontal"
-                android:gravity="center"
                 android:layout_marginHorizontal="30dp"
                 android:layout_marginVertical="10dp"
-                android:id="@+id/durationInput"
-                >
+                android:orientation="vertical"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/timeInput">
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="24sp"
-                    android:text="Selecteaza durata in minute"/>
-                <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/duration"
+
+                    android:paddingBottom="10dp"
+                    android:text="Repetitia evenimentului:"
+                    android:textSize="24sp" />
+
+                <RadioGroup
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    app:layout_constraintBottom_toBottomOf="parent">
 
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-
-                    android:hint="minute"
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                    android:layout_marginHorizontal="32dp">
-
-
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/durationEdit"
+                    <RadioButton
+                        android:id="@+id/never"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:text="Nu se repeta" />
 
-                        android:textSize="24sp"
-                        android:maxLines="1"
-                        android:inputType="number"/>
-                </com.google.android.material.textfield.TextInputLayout>
-                <TextView
-                    android:id="@+id/durationInputErr"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    <RadioButton
+                        android:id="@+id/hourly"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:text="Din ora in ora" />
 
-                    android:textSize="24sp"
-                    android:textColor="@color/red"/>
+                    <RadioButton
+                        android:id="@+id/daily"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:text="Zilnic" />
+
+                    <RadioButton
+                        android:id="@+id/weekly"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:text="Saptamanal" />
+
+                    <RadioButton
+                        android:id="@+id/monthly"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:text="Lunar" />
+
+                    <RadioButton
+                        android:id="@+id/annual"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:text="Anual" />
+
+                </RadioGroup>
             </LinearLayout>
+
             <Button
+                android:id="@+id/add"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/durationInput"
-                app:layout_constraintStart_toStartOf="parent"
+                android:text="Adauga"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:id="@+id/add"
-                android:text="Adauga"/>
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/repeatabilityInput" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
