Forgot to commit some small changes

--- a/Proiect2/app/src/main/res/layout/fragment_activity_calendar.xml
+++ b/Proiect2/app/src/main/res/layout/fragment_activity_calendar.xml
@@ -3,7 +3,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:padding="20dp"
 
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".activities.activityCalendar.ActivityCalendarFragment">
@@ -13,13 +12,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"/>
+        android:layout_marginTop="30dp" />
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/calendarView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="40dp"
         android:id="@+id/activityList"
         />
